--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link data-trunk rel="rust" data-wasm-opt="z" data-weak-refs />
+    <link data-trunk rel="tailwind-css" href="/tailwind.css" />
 </head>
 <body>
 </body>
