--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link data-trunk rel="rust" data-wasm-opt="z" data-weak-refs />
+    <link data-trunk rel="rust" data-keep-debug="true" data-wasm-opt="z"/>
     <link data-trunk rel="tailwind-css" href="/tailwind.css" />
 </head>
 <body>
